--- a/WiredBrainCoffee.CustomersApp/WiredBrainCoffee.CustomersApp.csproj
+++ b/WiredBrainCoffee.CustomersApp/WiredBrainCoffee.CustomersApp.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Images\Add.png" />
     <Resource Include="Images\logo.jpg" />
     <Resource Include="Images\move.png" />
